--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 include ':example', ':expanding-view'
+sourceControl {
+    gitRepository("https://github.com/MorsiBouhlel/gradle-bintray-plugin.git") {
+        producesModule("com.jfrog.bintray.gradle:gradle-bintray-plugin")
+    }
+}
