--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,18 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.0-rc01'
         //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        implementation('com.jfrog.bintray.gradle:gradle-bintray-plugin') {
-        version {
-            branch = 'master'
-        }
+        
     }
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+dependencies {
+   implementation('com.jfrog.bintray.gradle:gradle-bintray-plugin') {
+        version {
+            branch = 'master'
+        } 
 }
 
 allprojects {
