--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://maven.google.com' }
+        maven { url 'https://plugins.gradle.org/m2' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-rc01'
